Bug 248808 - Search/filter/mailview: fix "date", "is after" ("is before") to not include messages on the date. r=rkent